--- a/components/forms.html
+++ b/components/forms.html
@@ -23,25 +23,24 @@
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Form</div>
                 <div class="w-full">
                     <!--Basic form-->
-                    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                    <form class="bg-white dark:bg-slate-700 shadow-md rounded px-8 pt-6 pb-8 mb-4">
                       <div class="mb-4">
-                        <label class="block text-gray-700 text-lg font-bold mb-2" for="username">
+                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="username">
                           Username
                         </label>
-                        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
+                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="place for your name">
                       </div>
                       <div class="mb-6">
-                        <label class="block text-gray-700 text-lg font-bold mb-2" for="password">
+                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="password">
                           Password
                         </label>
-                        <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
-                        <p class="text-red-500 text-xs font-mono">Please choose a password.</p>
+                        <input class="appearance-none border-b-2 border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
                       </div>
                       <div class="flex items-center justify-between">
-                        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                        <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                           Sign In
                         </button>
-                        <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+                        <a class="inline-block align-baseline font-bold text-sm text-yellow-500 hover:text-yellow-800" href="#">
                           Forgot Password?
                         </a>
                       </div>
