--- a/components/dropdowns.html
+++ b/components/dropdowns.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Dropdowns</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,48 +14,45 @@
 <body class="bg-white dark:bg-slate-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Forms</h1>
+    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Dropdowns</h1>
 
-    <!--Forms-->
-    <div class="bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+
+    <!--Dropdowns-->
+    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
+            <!--Simple Dropdowns-->
             <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Form</div>
-                <div class="w-full">
-                    <!--Basic form-->
-                    <form class="bg-white dark:bg-slate-700 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                      <div class="mb-4">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="username">
-                          Username
-                        </label>
-                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="place for your name">
-                      </div>
-                      <div class="mb-6">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="password">
-                          Password
-                        </label>
-                        <input class="appearance-none border-b-2 border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
-                      </div>
-                      <div class="flex items-center justify-between">
-                        <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                          Sign In
-                        </button>
-                        <a class="inline-block align-baseline font-bold text-sm text-yellow-500 hover:text-yellow-800" href="#">
-                          Forgot Password?
-                        </a>
-                      </div>
-                    </form>
-                  </div>
+                <!-- component -->
+    <button class="bg-sky-600 p-2 font-bold text-gray-100 rounded-md peer focus:bg-sky-400 focus:text-gray-200 transition-all duration-200 ">Dropdown</button>
+    <div class=' w-80 absolute top-5 z-10
+    after:content-[""] after:inline-block after:absolute after:top-0 after:bg-white/40
+    after:w-full after:h-full after:-z-20 after:blur-[2px] after:rounded-lg
+peer-focus:top-12 peer-focus:opacity-100 peer-focus:visible 
+transition-all duration-300 invisible  opacity-0 
+'>
+        <ul class='py-6 px-3 flex flex-col gap-3'>
+            <li class='cursor-pointer bg-sky-300 p-3 rounded-md hover:opacity-90 text-white'>Eat an apple a day</li>
+            <li class='cursor-pointer bg-blue-300 p-3 rounded-md hover:opacity-90 text-white'>Eat an apple a day
+            </li>
+            <li class='cursor-pointer bg-cyan-300 p-3 rounded-md hover:opacity-90 text-white'>Eat an apple a day
+            </li>
+            <li class='cursor-pointer bg-red-300 p-3 rounded-md hover:opacity-90 text-white'>Eat an apple a day</li>
+            <li class='cursor-pointer bg-yellow-300 p-3 rounded-md hover:opacity-90 text-white'>Eat an apple a day
+            </li>
+        </ul>
+    </div>
+</div>
+</div>
                 
             </div>
-        
+
         </div>
     </div>
 
-
+    
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-2xl">
+    <div id="footer-navbar" class="w-full h-screen">
+        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
@@ -82,8 +79,9 @@
         </section>
     </div>
 
-    <!--IONICONS-->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+<!--IONICONS-->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
