--- a/components/toggle.html
+++ b/components/toggle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Toggles</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,48 +14,59 @@
 <body class="bg-white dark:bg-slate-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Forms</h1>
+    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Toggles</h1>
 
-    <!--Forms-->
-    <div class="bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <!--Buttons-->
+    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
+            <!--Basic buttons-->
             <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Form</div>
-                <div class="w-full">
-                    <!--Basic form-->
-                    <form class="bg-white dark:bg-slate-700 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                      <div class="mb-4">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="username">
-                          Username
-                        </label>
-                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="place for your name">
-                      </div>
-                      <div class="mb-6">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="password">
-                          Password
-                        </label>
-                        <input class="appearance-none border-b-2 border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
-                      </div>
-                      <div class="flex items-center justify-between">
-                        <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                          Sign In
-                        </button>
-                        <a class="inline-block align-baseline font-bold text-sm text-yellow-500 hover:text-yellow-800" href="#">
-                          Forgot Password?
-                        </a>
-                      </div>
-                    </form>
-                  </div>
-                
+                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Toggles</div>
+                <!--Basic blue toggle-->
+                <div class="flex items-center justify-center mb-2">
+                    <input
+                        type="checkbox"
+                        class="appearance-none w-9 focus:outline-none checked:bg-blue-300 h-5 bg-gray-300 rounded-full before:inline-block before:rounded-full before:bg-blue-500 before:h-4 before:w-4 checked:before:translate-x-full shadow-inner transition-all duration-300 before:ml-0.5"/>
+                </div>
+
+                <!--Basic pink toggle-->
+                <div class="flex items-center justify-center mb-2">
+                    <input
+                        type="checkbox"
+                        class="appearance-none w-9 focus:outline-none checked:bg-pink-300 h-5 bg-gray-300 rounded-full before:inline-block before:rounded-full before:bg-pink-500 before:h-4 before:w-4 checked:before:translate-x-full shadow-inner transition-all duration-300 before:ml-0.5"/>
+                </div>
+
+                <!--Basic yellow toggle-->
+                <div class="flex items-center justify-center mb-2">
+                    <input
+                        type="checkbox"
+                        class="appearance-none w-9 focus:outline-none checked:bg-yellow-300 h-5 bg-gray-300 rounded-full before:inline-block before:rounded-full before:bg-yellow-500 before:h-4 before:w-4 checked:before:translate-x-full shadow-inner transition-all duration-300 before:ml-0.5"/>
+                </div>
+
+                <!--Basic red toggle-->
+                <div class="flex items-center justify-center mb-2">
+                    <input
+                        type="checkbox"
+                        class="appearance-none w-9 focus:outline-none checked:bg-red-300 h-5 bg-gray-300 rounded-full before:inline-block before:rounded-full before:bg-red-500 before:h-4 before:w-4 checked:before:translate-x-full shadow-inner transition-all duration-300 before:ml-0.5"/>
+                </div>
+
+                <!--Basic green toggle-->
+                <div class="flex items-center justify-center mb-2">
+                    <input
+                        type="checkbox"
+                        class="appearance-none w-9 focus:outline-none checked:bg-green-300 h-5 bg-gray-300 rounded-full before:inline-block before:rounded-full before:bg-green-500 before:h-4 before:w-4 checked:before:translate-x-full shadow-inner transition-all duration-300 before:ml-0.5"/>
+                </div>
             </div>
-        
+            
         </div>
     </div>
 
 
+
+
     <!--Footer Navigation Bar-->
     <div class="w-full h-screen">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-2xl">
+        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
@@ -81,6 +92,7 @@
             </div>
         </section>
     </div>
+
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
