--- a/components/back-to-top.html
+++ b/components/back-to-top.html
@@ -4,58 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Back to Top</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+    <!--Important for back to top button-->
+    <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
 </head>
 <body class="bg-white dark:bg-slate-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Forms</h1>
+    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Back to Top</h1>
 
-    <!--Forms-->
-    <div class="bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <!--Buttons-->
+    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
+            <!--Basic buttons-->
             <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Form</div>
-                <div class="w-full">
-                    <!--Basic form-->
-                    <form class="bg-white dark:bg-slate-700 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                      <div class="mb-4">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="username">
-                          Username
-                        </label>
-                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="place for your name">
-                      </div>
-                      <div class="mb-6">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="password">
-                          Password
-                        </label>
-                        <input class="appearance-none border-b-2 border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
-                      </div>
-                      <div class="flex items-center justify-between">
-                        <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                          Sign In
-                        </button>
-                        <a class="inline-block align-baseline font-bold text-sm text-yellow-500 hover:text-yellow-800" href="#">
-                          Forgot Password?
-                        </a>
-                      </div>
-                    </form>
-                  </div>
-                
+                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Back to Top</div>
+                    <p class="text-slate-800 dark:text-white font-medium mb-4 font-mono">
+                        To see how it works, scroll down the page and click on the button that appears.
+
+                    </p>
+                    <p class="text-slate-800 dark:text-white font-medium mb-4">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Amet dolor in aliquid nesciunt, ipsam laudantium ex quae recusandae deleniti?
+                        Harum et consequatur soluta ab animi distinctio minima ad facilis quod?
+                    </p>
+                    <img src="https://images.unsplash.com/photo-1679087624010-4bd878cc8fde?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=986&q=80"
+                    class="rounded-xl"
+                    alt="">
+
+                <!--Button-->
+                <button x-data="topBtn" @click="scrolltoTop" id="topButton"
+                    class="fixed z-10 hidden p-2 bg-slate-200 dark:bg-slate-700 rounded-full shadow-lg right-10 animate-bounce">
+                    <ion-icon size="large" name="arrow-up-outline"></ion-icon>
+                </button>
+
+                <!--Button-->
+                <button x-data="topBtn" @click="scrolltoTop" id="topButton"
+                   class="fixed z-20 hidden bg-slate-200 dark:bg-slate-700 rounded-full shadow-lg right-8 animate-bounce">
+                   <ion-icon size="large" name="arrow-up-outline"></ion-icon>
+               </button>
+
+                <!--Scrtipt for back to top buttons-->
+                <script>
+                    document.addEventListener('alpine:init', () => {
+                        Alpine.data('topBtn', () => ({
+                            scrolltoTop() {
+                                document.body.scrollTop = 0;
+                                document.documentElement.scrollTop = 0;
+                            }
+                        }));
+                    });
+
+                    const topBtn = document.getElementById("topButton");
+                    window.onscroll = () => {
+                        (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) ?
+                        topBtn.classList.remove("hidden"): topBtn.classList.add("hidden");
+
+                    }
+                </script>
             </div>
-        
+
         </div>
     </div>
 
 
+
+
     <!--Footer Navigation Bar-->
     <div class="w-full h-screen">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-2xl">
+        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
@@ -81,6 +103,7 @@
             </div>
         </section>
     </div>
+
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
