--- a/components/alerts.html
+++ b/components/alerts.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5" role="alert">
-                <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Notifications with title</div>
+                <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Alert with title</div>
                 <div class="w-full">
                     <div class="mb-4 bg-blue-100 text-blue-900 rounded-md border border-blue-200 flex flex-col">
                         <div class="py-2 px-5 border-b border-blue-200 text-sm font-bold shadow-lg">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Closing Notifications</div>
+                <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Closing Alert</div>
                 <div class="w-full">
                     <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border border-blue-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
@@ -184,8 +184,6 @@
                             </svg>
                         </button>
                     </div>
-                </div>
-            </div>
 
                 </div>
             </div>
